5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1734_2498.log
== TEST (2019-05-14 19:22:08) 
-- CODE:
numero_de_habitantes_a=int(input("digite o numero de habitantes da cidade A: "))
numero_de_habitantes_b=int(input("digite o numero de habitantes da cidade B: "))
percentual_do_crescimento_de_habitantes_na_cidade_a=float(input("percentual de crescimento populacional da cidade A: "))
percentual_do_crescimento_de_habitantes_na_cidade_b=float(input("percentual de crescimento populacional da cidade B: "))
laco=0
while(pessoas_a>=pessoas_b):
	pessoas_a=numero_de_habitantes_a*(percentual_do_crescimento_de_habitantes_na_cidade_a/100)
	pessoas_b=numero_de_habitantes_b*(percentual_do_crescimento_de_habitantes_na_cidade_b/100)
	laco=laco+1
	print(laco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(pessoas_a>=pessoas_b):
NameError: name 'pessoas_a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:25:47) 
-- CODE:
numero_de_habitantes_a=int(input("digite o numero de habitantes da cidade A: "))
numero_de_habitantes_b=int(input("digite o numero de habitantes da cidade B: "))
percentual_do_crescimento_de_habitantes_na_cidade_a=float(input("percentual de crescimento populacional da cidade A: "))
percentual_do_crescimento_de_habitantes_na_cidade_b=float(input("percentual de crescimento populacional da cidade B: "))
laco=0
while(numero_de_habitantes_a>=laco):
	pessoas_a=numero_de_habitantes_a*(percentual_do_crescimento_de_habitantes_na_cidade_a/100)
	pessoas_b=numero_de_habitantes_b*(percentual_do_crescimento_de_habitantes_na_cidade_b/100)
	laco=laco+pessoasb
	print(laco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    laco=laco+pessoasb
NameError: name 'pessoasb' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:31:47) 
-- CODE:
numero_de_habitantes_a=int(input("digite o numero de habitantes da cidade A: "))
numero_de_habitantes_b=int(input("digite o numero de habitantes da cidade B: "))
percentual_do_crescimento_de_habitantes_na_cidade_a=float(input("percentual de crescimento populacional da cidade A: "))
percentual_do_crescimento_de_habitantes_na_cidade_b=float(input("percentual de crescimento populacional da cidade B: "))
laco=0
while(numero_de_habitantes_a>=laco):
	pessoas_a=numero_de_habitantes_a*(percentual_do_crescimento_de_habitantes_na_cidade_a/100)
	numero_de_habitantes_a= numero_de_habitantes_a+pessoas_a
	pessoas_b=numero_de_habitantes_b*(percentual_do_crescimento_de_habitantes_na_cidade_b/100)
	numero_de_habitantes_b= numero_de_habitantes_b+pessoas_b
	
	laco=laco+numero_de_habitantes_b
	print(laco)
-- OUTPUT:
640900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:32:05) 
-- CODE:
numero_de_habitantes_a=int(input("digite o numero de habitantes da cidade A: "))
numero_de_habitantes_b=int(input("digite o numero de habitantes da cidade B: "))
percentual_do_crescimento_de_habitantes_na_cidade_a=float(input("percentual de crescimento populacional da cidade A: "))
percentual_do_crescimento_de_habitantes_na_cidade_b=float(input("percentual de crescimento populacional da cidade B: "))
laco=0
while(numero_de_habitantes_a>=laco):
	pessoas_a=numero_de_habitantes_a*(percentual_do_crescimento_de_habitantes_na_cidade_a/100)
	numero_de_habitantes_a= numero_de_habitantes_a+pessoas_a
	pessoas_b=numero_de_habitantes_b*(percentual_do_crescimento_de_habitantes_na_cidade_b/100)
	numero_de_habitantes_b= numero_de_habitantes_b+pessoas_b
	
	laco=laco+numero_de_habitantes_b
	print(laco)
-- OUTPUT:
640900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:32:16) 
-- CODE:
numero_de_habitantes_a=int(input("digite o numero de habitantes da cidade A: "))
numero_de_habitantes_b=int(input("digite o numero de habitantes da cidade B: "))
percentual_do_crescimento_de_habitantes_na_cidade_a=float(input("percentual de crescimento populacional da cidade A: "))
percentual_do_crescimento_de_habitantes_na_cidade_b=float(input("percentual de crescimento populacional da cidade B: "))
laco=0
while(numero_de_habitantes_a>=laco):
	pessoas_a=numero_de_habitantes_a*(percentual_do_crescimento_de_habitantes_na_cidade_a/100)
	numero_de_habitantes_a= numero_de_habitantes_a+pessoas_a
	pessoas_b=numero_de_habitantes_b*(percentual_do_crescimento_de_habitantes_na_cidade_b/100)
	numero_de_habitantes_b= numero_de_habitantes_b+pessoas_b
	
	laco=laco+numero_de_habitantes_b
	print(laco)
-- OUTPUT:
640900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:35:24) 
-- CODE:
numero_de_habitantes_a=int(input("digite o numero de habitantes da cidade A: "))
numero_de_habitantes_b=int(input("digite o numero de habitantes da cidade B: "))
percentual_do_crescimento_de_habitantes_na_cidade_a=float(input("percentual de crescimento populacional da cidade A: "))
percentual_do_crescimento_de_habitantes_na_cidade_b=float(input("percentual de crescimento populacional da cidade B: "))
laco=0
while(numero_de_habitantes_a>=numero_de_habitantes_b):
	pessoas_a=numero_de_habitantes_a*(percentual_do_crescimento_de_habitantes_na_cidade_a/100)
	numero_de_habitantes_a= numero_de_habitantes_a+pessoas_a
	pessoas_b=numero_de_habitantes_b*(percentual_do_crescimento_de_habitantes_na_cidade_b/100)
	numero_de_habitantes_b= numero_de_habitantes_b+pessoas_b
	laco=laco+1
	print(laco)
-- OUTPUT:
640900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:36:29) 
-- CODE:
numero_de_habitantes_a=int(input("digite o numero de habitantes da cidade A: "))
numero_de_habitantes_b=int(input("digite o numero de habitantes da cidade B: "))
percentual_do_crescimento_de_habitantes_na_cidade_a=float(input("percentual de crescimento populacional da cidade A: "))
percentual_do_crescimento_de_habitantes_na_cidade_b=float(input("percentual de crescimento populacional da cidade B: "))
laco=0
while(numero_de_habitantes_a<numero_de_habitantes_b):
	pessoas_a=numero_de_habitantes_a*(percentual_do_crescimento_de_habitantes_na_cidade_a/100)
	numero_de_habitantes_a= numero_de_habitantes_a+pessoas_a
	pessoas_b=numero_de_habitantes_b*(percentual_do_crescimento_de_habitantes_na_cidade_b/100)
	numero_de_habitantes_b= numero_de_habitantes_b+pessoas_b
	laco=laco+1
	print(laco)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:36:59) 
-- CODE:
numero_de_habitantes_a=int(input("digite o numero de habitantes da cidade A: "))
numero_de_habitantes_b=int(input("digite o numero de habitantes da cidade B: "))
percentual_do_crescimento_de_habitantes_na_cidade_a=float(input("percentual de crescimento populacional da cidade A: "))
percentual_do_crescimento_de_habitantes_na_cidade_b=float(input("percentual de crescimento populacional da cidade B: "))
laco=0
while(numero_de_habitantes_a<numero_de_habitantes_b):
	pessoas_a=numero_de_habitantes_a*(percentual_do_crescimento_de_habitantes_na_cidade_a/100)
	numero_de_habitantes_a= numero_de_habitantes_a+pessoas_a
	pessoas_b=numero_de_habitantes_b*(percentual_do_crescimento_de_habitantes_na_cidade_b/100)
	numero_de_habitantes_b= numero_de_habitantes_b+pessoas_b
	laco=laco+1
print(laco)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:37:13) 
-- CODE:
numero_de_habitantes_a=int(input("digite o numero de habitantes da cidade A: "))
numero_de_habitantes_b=int(input("digite o numero de habitantes da cidade B: "))
percentual_do_crescimento_de_habitantes_na_cidade_a=float(input("percentual de crescimento populacional da cidade A: "))
percentual_do_crescimento_de_habitantes_na_cidade_b=float(input("percentual de crescimento populacional da cidade B: "))
laco=0
while(numero_de_habitantes_a<numero_de_habitantes_b):
	pessoas_a=numero_de_habitantes_a*(percentual_do_crescimento_de_habitantes_na_cidade_a/100)
	numero_de_habitantes_a= numero_de_habitantes_a+pessoas_a
	pessoas_b=numero_de_habitantes_b*(percentual_do_crescimento_de_habitantes_na_cidade_b/100)
	numero_de_habitantes_b= numero_de_habitantes_b+pessoas_b
	laco=laco+1
print(laco)
-- EXECUTION TIME:
0.292433
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
